Fixed jumpstart text in footer.

--- a/app/assets/stylesheets/components/app-footer.scss
+++ b/app/assets/stylesheets/components/app-footer.scss
@@ -12,3 +12,11 @@
 
   @include center-and-limit-content-width();
 }
+
+  .app-footer-jumpstart {
+
+  }
+
+    .app-footer-jumpstart-logo {
+      vertical-align: -10px;
+    }
